# mixxx

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md
.devcontainer/: Dockerfile
.github/: labeler.yml
.github/workflows/: beat_analyzer.yml  build-checks.yml  build.yml  develop.yml  labeler.yml  pr-command.yml  pre-commit.yml  release.yml  sync_branches.yml  vcpkg_update.yml
android/: AndroidManifest.xml  build.gradle
materialendoftrack/: CMakeLists.txt  customitem.cpp  customitem.h  custommaterial.qrc  main.cpp  main.qml
materialendoftrack/shaders/: endoftrack.frag  endoftrack.frag.gl  endoftrack.vert  endoftrack.vert.gl
packaging/android/: AndroidManifest.xml
packaging/debian/: control.in
res/controllers/: Dummy Device Screen.hid.xml  Dummy Device Screen2.hid.xml  Dummy-Device-Default-Screen.qml  DummyDeviceDefaultScreen.qml  Traktor Kontrol S4 MK3.bulk.xml  Traktor Kontrol S4 MK3.hid.xml  Traktor-Kontrol-S4-MK3-Screens.js  Traktor-Kontrol-S4-MK3-Screens.qml  Traktor-Kontrol-S4-MK3.js  TraktorKontrolS4MK3Screens.qml  engine-api.d.ts
res/qml/: ActionPopup.qml  AudioEntity.qml  AudioEntityEdge.qml  AuxiliaryUnit.qml  Button.qml  ComboBox.qml  Deck.qml  DeckInfoBar.qml  EqColumn.qml  Library.qml  LibraryBrowser.qml  LibraryCell.qml  LibraryPanel.qml  LibraryPreviewDeck.qml  LibraryTable.qml  LibraryTrackList.qml  Mixer.qml  MixerColumn.qml  RatioChoice.qml  Sampler.qml  SectionText.qml  SettingAudioRouter.qml  SettingController.qml  SettingInterface.qml  SettingSoundHardware.qml  Settings.qml  Slider.qml  WaveformCue.qml  WaveformDisplay.qml  WaveformHotcue.qml  WaveformIntroOutro.qml  WaveformLoop.qml  WaveformOverview.qml  WaveformRow.qml  WaveformShader.qml  main.qml
res/shaders/: rgbsignal_qml.frag  rgbsignal_qml.frag.qsb
src/: coreservices.cpp  coreservices.h  main.cpp  mixxxapplication.cpp  mixxxapplication.h  mixxxmainwindow.h
src/control/: controlsortfiltermodel.h
src/controllers/: android.cpp  controller.cpp  controller.h  controllermanager.cpp  controllermanager.h  controllermappinginfo.cpp  controllermappinginfo.h  controllerruntimedata.cpp  controllerruntimedata.h  controllershareddata.cpp  controllershareddata.h  dlgprefcontroller.cpp  dlgprefcontroller.h  dlgprefcontrollerdlg.ui  legacycontrollermapping.h  legacycontrollermappingfilehandler.cpp  legacycontrollermappingfilehandler.h
src/engine/: enginebuffer.cpp
src/mixer/: basetrackplayer.cpp  basetrackplayer.h  playermanager.cpp  playermanager.h  samplerbank.cpp
src/proto/: CMakeLists.txt  plugin.proto
src/qml/: qmlapplication.cpp  qmlapplication.h  qmlautoreload.cpp  qmlconfigproxy.cpp  qmlconfigproxy.h  qmlcontrollerproxy.cpp  qmlcontrollerproxy.h  qmlcuesmodel.cpp  qmlcuesmodel.h  qmllibraryproxy.cpp  qmllibraryproxy.h  qmllibrarytracklistmodel.cpp  qmllibrarytracklistmodel.h  qmllibrarytreeviewmodel.cpp  qmllibrarytreeviewmodel.h  qmlmixxxcontroller.cpp  qmlmixxxcontroller.h  qmlplayermanagerproxy.cpp  qmlplayermanagerproxy.h  qmlplayerproxy.cpp  qmlplayerproxy.h  qmlrendertest.cpp  qmlrendertest.h  qmltablefromlistmodel.cpp  qmltablefromlistmodel.h  qmltablefromlistmodelcolumn.cpp  qmltablefromlistmodelcolumn.h  qmltrackproxy.h  (+8 more)
tools/: README  analyzer_benchmark.py  android_buildenv.sh  debian_buildenv.sh  macos_buildenv.sh  update_vcpkg.py  windows_buildenv.bat
(+258 files in other folders)
